updated link to picture

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <p> Ex-salaryman turned Jujutsu scorcer. Likes bread.🥪</p>
                 </div>
                 <div class="character flex">
-                    <img class="characters-img"src="https://static.wikia.nocookie.net/fma/images/a/a8/Avatar_roy2003.png/revision/latest?cb=20171026204538" alt="Roy Mustang">
+                    <img class="characters-img"src="https://static.wikia.nocookie.net/fma/images/a/a8/Avatar_roy2003.png" alt="Roy Mustang">
                     <h4>Roy Mustang</h4>
                     <p> Dog of the army, but looks good. Buys too many flowers sometimes.💐</p>
                 </div>
@@ -37,10 +37,10 @@
         <div id="guide-section">
             <div class="flex" id="card">
                 <img id="card-img"src="https://i3.cpcache.com/merchandise_zoom/833_750x750_Front_Color-White.jpg?region={%22name%22:%22FrontCenter%22,%22width%22:24.025377,%22height%22:33.33,%22alignment%22:%22MiddleCenter%22,%22orientation%22:1,%22dpi%22:72,%22crop_x%22:0,%22crop_y%22:0,%22crop_h%22:2399,%22crop_w%22:1729,%22scale%22:0.9999001,%22template%22:{%22id%22:105245078,%22params%22:{}}}&AttributeValue=NA&c=False&cid=PUartJBjiF%2Fyg4FdKqiggQ%3D%3D+%7C%7C+XrJ7mWkqPr%2BTDuD1j5KtPQ%3D%3D&ProductNo=1817395224" alt="" class="guide-img">
-                <div class="guide-description">
+                <div id="guide-description">
                     <h3>Your guide</h3>
-                    <p>I have dreamed of living here for many years even though of course I know it's not real</p>
-                    <p>Weeb3 Nerd</p>
+                    <p class="italic">I have dreamed of living here for many years even though of course I know it's not real</p>
+                    <p class="bold">Weeb3 Nerd</p>
                 </div>    
             </div>
         </div>
